--- a/GC.html
+++ b/GC.html
@@ -15,7 +15,8 @@
 	
 	<section class="navSection">
 	  <nav>
-	    <a>Home</a> | <a>Games</a> | <a>Manga</a> | <a>Characters</a> | <a>Locations</a>
+	    <a href="GC.html">Home</a> | <a href="Games.html">Games</a> | <a href="Manga.html">Manga</a> | <a href=""Characters.html>Characters</a> | 
+		<a href="Locations.html">Locations</a>
 	  </nav>
 	</section>  
 	  
