--- a/GC.html
+++ b/GC.html
@@ -15,7 +15,7 @@
 	
 	<section class="navSection">
 	  <nav>
-	    <a href="GC.html">Home</a> | <a href="Games.html">Games</a> | <a href="Manga.html">Manga</a> | <a href=""Characters.html>Characters</a> | 
+	    <a href="GC.html">Home</a> | <a href="Games.html">Games</a> | <a href="Manga.html">Manga</a> | <a href="Characters.html">Characters</a> | 
 		<a href="Locations.html">Locations</a>
 	  </nav>
 	</section>  
