--- a/GC.html
+++ b/GC.html
@@ -15,8 +15,11 @@
 	
 	<section class="navSection">
 	  <nav>
-	    <a href="GC.html">Home</a> | <a href="Games.html">Games</a> | <a href="Manga.html">Manga</a> | <a href="Characters.html">Characters</a> | 
-		<a href="Locations.html">Locations</a>
+	    <a>Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a>Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a>Manga</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a>Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a>Locations</a>
 	  </nav>
 	</section>  
 	  
@@ -28,7 +31,7 @@
 	
 	<footer class="footer">
 	  <img src="">
-	  <p>Proudly Powered by Moriya Nuclear Facilities<br>
+	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
 	  Last Modified: <script>document.write(document.lastModified)</script> <br>
 	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
 	</footer>
