--- a/Characters.html
+++ b/Characters.html
@@ -3,8 +3,114 @@
   <head>
 	<meta charset="utf-8">
 	<title>Austin VanCorbach</title>
+	<link rel="stylesheet" href="GC.css">
   </head>
   <body>
-
+    <section class="headerSection">
+	  <header>
+	    <h4 class="titleHeading">Gensokyo Chronicle</h3>
+	    <p class="titleText">Girls are preparing, please wait warmly...</p>
+	  </header>
+	</section>
+	
+	<section class="navSection">
+	  <nav>
+	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Locations.html">Assorted Music</a>
+	  </nav>
+	</section>  
+	  
+	<section class="bodySection">
+	  <h1 class="bodyHeading">Characters</h1>
+	  <p class="bodySubhead">Protagonists</p>
+	  <ol>
+	    <li class="listContent"><a>Reimu Hakurei</a>
+	    <li class="listContent"><a>Marisa Kirisame</a>
+	  </ol>
+	  <p class="bodySubhead">Major Antagonists</p>
+	  <ol>
+        <li class="listContent"><a>Konngara</a> / <a>Sariel</a>
+		<li class="listContent"><a>Mima</a>
+		<li class="listContent"><a>Yumemi Okazaki</a>
+		<li class="listContent"><a>Yuuka Kazami</a>
+		<li class="listContent"><a> Shinki</a>
+		<li class="listContent"><a> Remilia Scarlet</a>
+		<li class="listContent"><a> Yuyuko Saigyouji</a>
+		<li class="listContent"><a> Suika Ibuki</a>
+        <li class="listContent"><a> Eirin Yagokoro</a> / <a>Kaugya Houraisen</a>
+		<li class="listContent"><a> Eiki Shiki, Yamaxanadu</a>
+		<li class="listContent"><a>Kanako Yasaka</a>
+		<li class="listContent"><a>Tenshi Hinanawi</a>
+		<li class="listContent"><a>Utsuho Reiuji</a>
+		<li class="listContent"><a>Byakuren Hijiri</a>
+		<li class="listContent"><a>Toyosatomimi no Miko</a>
+		<li class="listContent"><a>Hata no Kokoro</a>
+		<li class="listContent"><a>Shinmyoumaru Sukuna</a>
+		<li class="listContent"><a>Sumireko Usami</a>
+		<li class="listContent"><a>Junko</a>
+		<li class="listContent"><a>Joon/Shion Yorigami</a>
+		<li class="listContent"><a>Okina Matara</a>
+		<li class="listContent"><a>Keiki Haniyasushin</a>
+		<li class="listContent"><a>Yuuma Toutetsu</a>
+		<li class="listContent"><a>Chimata Tenkyuu</a>
+	  </ol>
+	  <p class="bodySubhead">Noteable Adversaries</p>
+	  <ol>
+	    <li class="listContent"><a>TH1:</a>
+          <li class="listSubcontent"><a>Sin Gyoku</a>, <a>Yuggen Magan</a>, <a>Elis</a>, <a>Mima</a>, <a>Kikuri</a>
+		<li class="listContent"><a>TH2:</a>
+          <li class="listSubcontent"><a>Rika</a>, <a>Noroiko</a>, <a>Meira</a>, <a>Marisa</a>
+		<li class="listContent"><a>TH3:</a>
+		  <li class="listSubcontent"><a>Ellen</a>, <a>Kotohime</a>, <a>Kana Anaberal</a>, <a>Rikako Asakura</a>, <a>Chiyuri Kitashirakawa</a>
+		<li class="listContent"><a>TH4:</a>
+		  <li class="listSubcontent"><a>Orange</a>, <a>Kurumi</a>, <a>Elly</a>, <a>Mugetsu</a>, <a>Gengentsu</a>
+		<li class="listContent"><a>TH5:</a>
+		  <li class="listSubcontent"><a>Sara</a>, <a>Louise</a>, <a>Alice</a>, <a>Yuki</a>, <a>Mai</a>, <a>Yumeko</a>
+		<li class="listContent"><a>TH6:</a>
+          <li class="listSubcontent"><a>Rumia</a>, <a>Daiyousei</a>, <a>Cirno</a>, <a>Hong Meiling</a>, <a>Koakuma</a>, <br><a>Patchouli Knowledge</a>, <a>Sakuya Izayoi</a>, <a>Flandre Scarlet</a>
+		<li class="listContent"><a>TH7:</a>
+		  <li class="listSubcontent"><a>Letty Whiterock</a>, <a>Chen</a>, <a>Alice Margatroid</a>, <a>Lily White</a>, <br><a>Lunasa</a> / <a>Merlin</a> / <a>Lyrica Prismriver</a>, <a>Youmu Konpaku</a>, <a>Ran Yakumo</a>, <a>Yukari Yakumo</a>
+		<li class="listContent"><a>TH8:</a>
+		  <li class="listSubcontent"><a>Wriggle Nightbug</a>, <a>Mystia Lorelei</a>, <a>Keine Kamishirasawa</a>, <a>Tewi Inaba</a>, <a>Reisen Udongein Inaba</a>, <a>Fujiwara no Mokou</a>,
+		<li class="listContent"><a>TH9:</a>
+		  <li class="listSubcontent"><a>Aya Shameimaru</a>, <a>Medicine Melancholy</a>, <a>Komachi Onozuka</a>
+          <li class="listContent"><a>TH10:</a>
+		  <li class="listSubcontent"><a>Shizuha</a> / <a>Minoriko Aki</a>, <a>Hina Kagiyama</a>, <a>Nitori Kawashiro</a>, <br><a>Momiji Inubashiri</a>, <a>Sanae Kochiya</a>, <a>Suwako Moriya</a>
+		<li class="listContent"><a>TH10.5:</a>
+          <li class="listSubcontent"><a>Iku Nagae</a>
+		<li class="listContent"><a>TH11:</a>
+		  <li class="listSubcontent"><a>Kisume</a>, <a>Yamane Kurodani</a>, <a>Parsee Mizuhashi</a>, <a>Yuugi Hoshiguma</a>, <br><a>Satori Komeiji</a>, <a>Rin Kaenbyou</a>, <a>Koishi Komeiji</a>
+		<li class="listContent"><a>TH12:</a>
+          <li class="listSubcontent"><a>Nazrin</a>, <a>Kogasa Tatara</a>, <a>Ichirin Kumoi</a> / <a>Unzan</a>, <a>Minamitsu Murasa</a>, <br><a>Shou Toramaru</a>, <a>Nue Houjuu</a>
+		<li class="listContent"><a>TH12.5:</a>
+		  <li class="listSubcontent"><a>Hatate Himekaidou</a>
+		<li class="listContent"><a>TH13:</a>
+		  <li class="listSubcontent"><a>Kyouko Kasodani</a>, <a>Yoshika Miyako</a>, <a>Seiga Kaku</a>, <a>Soga no Tojiko</a>, <a>Mononobe no Futo</a>, <a>Mamizou Futasuiwa</a>
+		<li class="listContent"><a>TH14:</a>
+		  <li class="listSubcontent"><a>Wakasagihime</a>, <a>Sekibanki</a>, <a>Kagerou Imaizumi</a>, <br><a>Benben</a> / <a>Yatsuhashi Tsukumo</a>, <a>Seiji Kijin</a>, <a>Raiko Horikawa</a>
+		<li class="listContent"><a>TH15:</a>
+		  <li class="listSubcontent"><a>Seiran</a>, <a>Ringo</a>, <a>Doremy Sweet</a>, <a>Sagume Kishin</a>, <a>Clownpiece</a>, <br><a>Hecatia Lapislazuli</a>
+		<li class="listContent"><a>TH16:</a>
+		  <li class="listSubcontent"><a>Eternity Larvae</a>, <a>Nemuno Sakata</a>, <a>Aunn Komano</a>, <a>Narumi Yatadera</a>, <a>Satono Nishida</a>, <a>Mai Teireida</a>
+		<li class="listContent"><a>TH17:</a>
+		  <li class="listSubcontent"><a>Eika Ebisu</a>, <a>Urumi Ushizaki</a>, <a>Kutaka Niwatari</a>, <a>Yachie Kichou</a>, <br><a>Mayumi Joutouguu</a>, <a>Saki Kurokoma</a>
+ 		<li class="listContent"><a>TH18:</a>
+		  <li class="listSubcontent"><a>Mike Goutokuji</a>, <a>Takane Yamashiro</a>, <a>Sannyo Komakusa</a>, <br><a>Misumaru Tamatsukuri</a>, <a>Tsukasa Kudamaki</a>, <a>Megumu Iizunamaru</a>, <a>Momoyo Himemushi</a>
+	  </ol>
+	  <p class="bodySubhead">Noteworthy Characters</p>
+	  <ol>
+	    <li class="listSubcontent"><a>Rinnosuke Morichika</a>, <a>Tokiko</a>, <a>Luna Child</a>, <a>Star Sapphire</a>, <a>Sunny Milk</a>, <a>Reisen</a>, <a>Watatsuki no Yorihime</a>, <a>Watatsuki no Toyohime</a>, <a>Kasen Ibaraki</a>, <a>Kosuzu Motoori</a>, <a>Mizuchi Miyadeguchi</a>, <a>Miyoi Okunoda</a>,  <a>Maribel Hearn</a>, <a>Renko Usami</a>, <a>Hieda no Akyuu</a>,
+	  </ol>
+	</section>
+	
+	<footer class="footer">
+	  <img src="">
+	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
+	  Last Modified: <script>document.write(document.lastModified)</script> <br>
+	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
+	</footer>
   </body>
 </html>
