--- a/GC.html
+++ b/GC.html
@@ -17,20 +17,20 @@
 	  <nav>
 	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="Manga.html">Manga</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="Locations.html">Locations</a>
+		<a href="Locations.html">Assorted Music</a>
 	  </nav>
 	</section>  
 	  
 	<section class="bodySection">
-	  <h1 class="welcomeHeading">Welcome Humans and Youkai</h1>
-	  <img src="shinto.png">
-	  <p class="welcomeText">To the Gensokyo Chronicle, your one stop to find out anything about the Touhou project.</p>
+	  <h1 class="bodyHeading">Welcome Humans and Youkai</h1>
+	  <img src="shinto.png" class="bodyImg">
+	  <p class="bodyText">To the Gensokyo Chronicle, your one stop to find out anything about the Touhou project.</p>
 	</section>
 	
 	<footer class="footer">
-	  <img src="">
+	  <img src="Shrine.jpg" class="footerImage">
 	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
 	  Last Modified: <script>document.write(document.lastModified)</script> <br>
 	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
