--- a/Manga.html
+++ b/Manga.html
@@ -3,8 +3,86 @@
   <head>
 	<meta charset="utf-8">
 	<title>Austin VanCorbach</title>
+	<a><link rel="stylesheet" href="GC.css">
   </head>
   <body>
-
+    <section class="headerSection">
+	  <header>
+	    <h4 class="titleHeading">Gensokyo Chronicle</h3>
+	    <p class="titleText">Girls are preparing, please wait warmly...</p>
+	  </header>
+	</section>
+	
+	<section class="navSection">
+	  <nav>
+	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+		<a href="Locations.html">Assorted Music</a>
+	  </nav>
+	</section>  
+	  
+	<section class="bodySection">
+	  <h1 class="bodyHeading">Official Works</h1>
+	  <p class="bodySubhead">Artbooks</p>
+	  <ol>
+		<a><li class="listContent">Bohemian Archive in Japanese Red</a>
+		<a><li class="listSubcontent">- Extra of the Wind</a>
+		<a><li class="listContent">Seasonal Dream Vision</a>
+		<a><li class="listSubcontent">- A Beautiful Flower Blooming Every Sixty Years</a>
+	    <a><li class="listContent">Perfect Memento in Strict Sense</a>
+		<a><li class="listSubcontent">- Memorizable Gensokyo</a>
+		<a><li class="listContent">The Grimoire of Marisa</a>
+		<a><li class="listContent">Symposium of Post-mysticism</a>
+		<a><li class="listContent">Alternative Facts in Eastern Utopia</a>
+		<a><li class="listContent">The Grimoire of Usami</a>
+	  </ol>
+	  <p class="bodySubhead">Manga</p>
+	  <ol>
+	    <a><li class="listContent">Touhou Sangetsu</a>
+		<a><li class="listSubcontent">- Eastern and Little Nature Deity</a>
+		<a><li class="listSupercontent">~ Fairy of the Moon</a>
+		<a><li class="listSubcontent">- Strange and Bright Nature Deity</a>
+		<a><li class="listSubcontent">- Oriental Sacred Place</a>
+		<a><li class="listSubcontent">- Visionary Fairies in Shrine</a>
+		<a><li class="listContent">Touhou Bougetsushou</a>
+		<a><li class="listSubcontent">Silent sinner in Blue</a>
+		<a><li class="listSubcontent">Cage in Lunatic Runagate</a>
+		<a><li class="listSubcontent">Inaba of Moon and Earth</a>
+		<a><li class="listContent">Wild and Horned Hermit</a>
+		<a><li class="listContent">Forbidden Scrollery</a>
+		<a><li class="listContent">Lotus Eaters</a>
+		<a><li class="listContent">Foul Detective Satori</a>
+	  </ol>
+	  <p class="bodySubhead">Magazines</p>
+	  <ol>
+	    <a><li class="listContent">Strange Creators of Outer World</a>
+		<a><li class="listContent">Strange Articles of the Outer World</a>
+	  </ol>
+	  <p class="bodySubhead">Supplemental</p>
+	  <ol>
+		<a><li class="listContent">Curiosities of Lotus Asia</a>
+	  </ol>
+	  <p class="bodySubhead">CDs</p>
+	  <ol>
+	    <a><li class="listContent">Dolls in Pseudo Paradise</a>
+		<a><li class="listContent">Ghostly Field Club</a>
+		<a><li class="listContent">Changeability of Strange Dreams</a>
+		<a><li class="listContent">Retrospective 53 Minutes</a>
+		<a><li class="listContent">Magical Astronomy</a>
+		<a><li class="listContent">Trojan Green Asteroid</a>
+		<a><li class="listContent">Neo-traditionalism of Japan</a>
+		<a><li class="listContent">Dr. Latency's Freak Report</a>
+		<a><li class="listContent">Dateless Bar "Old Adam"</a>
+	  </ol>
+	</section>
+	
+	<footer class="footer">
+	  <img src="Shrine.jpg">
+	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
+	  Last Modified: <script>document.write(document.lastModified)</script> <br>
+	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
+	</footer>
   </body>
 </html>
