--- a/Games.html
+++ b/Games.html
@@ -3,8 +3,80 @@
   <head>
 	<meta charset="utf-8">
 	<title>Austin VanCorbach</title>
+	<link rel="stylesheet" href="GC.css">
   </head>
   <body>
-
+    <section class="headerSection">
+	  <header>
+	    <h4 class="titleHeading">Gensokyo Chronicle</h3>
+	    <p class="titleText">Girls are preparing, please wait warmly...</p>
+	  </header>
+	</section>
+	
+	<section class="navSection">
+	  <nav>
+	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Locations.html">Assorted Music</a>
+	  </nav>
+	</section>  
+	  
+	<section class="bodySection">
+	  <h1 class="bodyHeading">Games</h1>
+	  <p class="bodyText">There are a total of 30 Touhou games with 18 mainline games and 12 spinoff games. 
+	  <br>There are 4 other miscellaneous games created by Amusement Makers, an unofficial student group from Zun's past.</p>
+	  <h1 class="bodySubhead">Mainline games</h1>
+	  <ol>
+	    <li class="gamesList"><a href="hrtp.htm">TH 1: Highly Responsive to Prayers (HRtP)</a>
+		<li class="gamesList"><a href="soew.htm">TH 2: Story of Eastern Wonderland (SoEW)</a>
+		<li class="gamesList"><a href="podd.htm">TH 3: Phantasmagoria of Dimension Dream (PoDD)</a>
+		<li class="gamesList"><a href="lls.htm">TH 4: Lotus Land Story (LLS)</a>
+		<li class="gamesList"><a href="ms.htm">TH 5: Mystic Square (MS)</a>
+		<li class="gamesList"><a href="eosd.htm">TH 6: Embodiment of Scarlet Devil (EoSD)</a>
+		<li class="gamesList"><a href="pcb">TH 7: Perfect Cherry Blossom (PCB)</a>
+		<li class="gamesList"><a href="in.htm">TH 8: Imperishable Night (IN)</a>
+		<li class="gamesList"><a href="pofv.htm">TH 9: Phantasmagoria of Flower View (PoFV)</a>
+		<li class="gamesList"><a href="mof.htm">TH 10: Mountain of Faith (MoF)</a>
+		<li class="gamesList"><a href="sa.htm">TH 11: Subterranean Animism (SA)</a>
+		<li class="gamesList"><a href="ufo.htm">TH 12: Undefined Fantastic Object (UFO)</a>
+		<li class="gamesList"><a href="tf.htm">TH 13: Ten Desires (TD)</a>
+		<li class="gamesList"><a href="ddc.htm">TH 14: Double Dealing Character (DDC)</a>
+		<li class="gamesList"><a href="lolk.htm">TH 15: Legacy of Lunatic Kingdom (LoLK)</a>
+		<li class="gamesList"><a href="hsifs.htm">TH 16: Hidden Star in Four Seasons (HSiFS)</a>
+		<li class="gamesList"><a href="wbawc.htm">TH 17: Wily Beast and Weakest Creature (WbaWC)</a>
+		<li class="gamesList"><a href="um.htm">TH 18: Unconnected Marketeers (UM)</a>
+	  </ol>
+	  <h1 class="bodySubhead">Spinoffs</h1>
+	  <ol>
+	    <li class="gamesList"><a href="iamp.htm">TH 7.5: Immaterial and Missing Power (IaMP)</a>
+		<li class="gamesList"><a href="stb.htm">TH 9.5: Shoot the Bullet (StB)</a>
+		<li class="gamesList"><a href="swr.htm">TH 10.5: Scarlet Weather Rhapsody (SWR)</a>
+		<li class="gamesList"><a href="hiso.htm">TH 12.3: Touhou Hisoutensoku</a>
+		<li class="gamesList"><a href="ds.htm">TH 12.5: Double Spoiler (DS)</a>
+		<li class="gamesList"><a href="fw.htm">TH 12.8: Fairy Wars (FW/GFW)</a>
+		<li class="gamesList"><a href="hm.htm">TH 13.5: Hopeless Masquerade (HM)</a>
+		<li class="gamesList"><a href="isc.htm">TH 14.3: Impossible Spell Care (ISC)</a>
+		<li class="gamesList"><a href="ulil.htm">TH 14.5: Urban Legend in Limbo (ULiL)</a>
+		<li class="gamesList"><a href="aocf.htm">TH 15.5: Antinomy of Common Flowers (AoCF)</a>
+		<li class="gamesList"><a href="vd.htm">TH 16.5: Violet Detector (VD)</a>
+		<li class="gamesList"><a href="ibun.htm">TH 17.5: Touhou Gouyoku Ibun</a>
+	  </ol>
+	  <h1 class="bodySubhead">Other Games</h1>
+	  <ol class="bottomList">
+	    <li class="gamesList"><a href="goldrush.htm">Gold Rush</a>
+		<li class="gamesList"><a href="seihou.htm">Seihou Project</a>
+		<li class="gamesList"><a href="samidare.htm">Samidare</a>
+		<li class="gamesList"><a href="uwabami.htm">Uwabami Breakers</a>
+	  </ol>
+	</section>
+	
+	<footer class="footer">
+	  <img src="Shrine.jpg">
+	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
+	  Last Modified: <script>document.write(document.lastModified)</script> <br>
+	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
+	</footer>
   </body>
 </html>
