--- a/Characters.html
+++ b/Characters.html
@@ -107,7 +107,7 @@
 	</section>
 	
 	<footer class="footer">
-	  <img src="">
+	  <img src="Shrine.jpg">
 	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
 	  Last Modified: <script>document.write(document.lastModified)</script> <br>
 	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
