--- a/Locations.html
+++ b/Locations.html
@@ -3,8 +3,36 @@
   <head>
 	<meta charset="utf-8">
 	<title>Austin VanCorbach</title>
+	<link rel="stylesheet" href="GC.css">
   </head>
   <body>
-
+    <section class="headerSection">
+	  <header>
+	    <h4 class="titleHeading">Gensokyo Chronicle</h3>
+	    <p class="titleText">Girls are preparing, please wait warmly...</p>
+	  </header>
+	</section>
+	
+	<section class="navSection">
+	  <nav>
+	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="Locations.html">Assorted Music</a>
+	  </nav>
+	</section>  
+	  
+	<section class="bodySection">
+	  <h1 class="bodyHeading">Assorted Music</h1>
+	  <p class="bodyText"></p>
+	</section>
+	
+	<footer class="footer">
+	  <img src="Shrine.jpg">
+	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
+	  Last Modified: <script>document.write(document.lastModified)</script> <br>
+	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
+	</footer>
   </body>
 </html>
