--- a/Manga.html
+++ b/Manga.html
@@ -79,7 +79,7 @@
 	</section>
 	
 	<footer class="footer">
-	  <img src="Shrine.jpg">
+	  <img src="Shrine.jpg" class="footerImage">
 	  <p class="footerText">Proudly Powered by Moriya Nuclear Facilities<br>
 	  Last Modified: <script>document.write(document.lastModified)</script> <br>
 	  Copyright© 2022 - Hieda & Kiketsu LLC</p>
