--- a/Locations.html
+++ b/Locations.html
@@ -16,7 +16,7 @@
 	<section class="navSection">
 	  <nav>
 	    <a href="GC.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	    <a href="Games.html">Games</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="Manga.html">Official Works</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="Characters.html">Characters</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="Locations.html">Assorted Music</a>
@@ -25,7 +25,62 @@
 	  
 	<section class="bodySection">
 	  <h1 class="bodyHeading">Assorted Music</h1>
-	  <p class="bodyText"></p>
+		<p class="bodyText">ZUN has produced 36 Music CDs and contributed to 4 other albums as well as the entire Touhou OST. This is comprised of 11 Albums with an attached story, 5 OST's of cut music from PC-98 titles, 12 CDs released with equivalent manga, and 8 fighting games that Zun has contributed to.</p>
+		<p class="bodySubhead">Zun's Music Albums</p>
+		<ol>
+		  <li class="listContent"><a>Dolls In Pseudo Paradise</a>
+	      <li class="listContent"><a>Ghostly Field Club</a>
+		  <li class="listContent"><a>Changability of Strange Dreams</a>
+		  <li class="listContent"><a>Rstrospective of 53 Minutes</a>
+		  <li class="listContent"><a>Magical Astronomy</a>
+	      <li class="listContent"><a>Unknown Flower, Mesmerizing Journey</a>
+		  <li class="listContent"><a>Trojan Green Asteroid</a>
+		  <li class="listContent"><a>Neo-traditionalism of Japan</a>
+		  <li class="listContent"><a>Dr. Latency's Freak Report</a>
+	      <li class="listContent"><a>Dateless Bar "Old Adam"</a>
+		  <li class="listContent"><a>Rainbow-Colored Septentrion</a>
+		</ol>
+		<p class="bodySubhead">PC-98 OST</p>
+		<ol>
+		  <li class="listContent"><a>Akyu's Untouched Score vol.1</a>
+		  <li class="listContent"><a>Akyu's Untouched Score vol.2</a>
+	      <li class="listContent"><a>Akyu's Untouched Score vol.3</a>
+		  <li class="listContent"><a>Akyu's Untouched Score vol.4</a>
+		  <li class="listContent"><a>Akyu's Untouched Score vol.5</a>
+		</ol>
+		<p class="bodySubhead">Bonus CDs</p>
+		<ol>
+		  <li class="listContent"><a>Bohemian Archive in Japanese Red</a>
+	      <li class="listContent"><a>Perfect Mememto in Strict Sense</a>
+		  <li class="listContent"><a>Eastern and Little Nature Deity</a>
+		  <li class="listContent"><a>Strange and Bright Nature Deity vol.1</a>
+		  <li class="listContent"><a>Silent Sinner in Blue</a>
+	      <li class="listContent"><a>Strange and Bright Nature Deity vol.2</a>
+		  <li class="listContent"><a>The Grimoire of Marisa</a>
+		  <li class="listContent"><a>Strange and Bright Nature Deity vol.3</a>
+		  <li class="listContent"><a>Oriental Sacred Place CD 1</a>
+	      <li class="listContent"><a>Oriental Sacred Place CD 2</a>
+		  <li class="listContent"><a>Oriental Sacred Place CD 3</a>
+		  <li class="listContent"><a>Forbidden Scrollery</a>
+		</ol>
+		<p class="bodySubhead">Fighting Game OST</p>
+		<ol>
+		  <li class="listContent"><a>IaMP OST</a>
+	      <li class="listContent"><a>SWR OST</a>
+		  <li class="listContent"><a>Hisotensoku OST</a>
+		  <li class="listContent"><a>HM OST</a>
+		  <li class="listContent"><a>ULiL OST pt1</a>
+		  <li class="listContent"><a>ULiL OST pt2</a>
+		  <li class="listContent"><a>AoCF OST</a>
+	      <li class="listContent"><a>Gouyoku Ibun OST</a>
+		</ol>
+		<p class="bodySubhead">Other Albums</p>
+		<ol>
+		  <li class="listContent"><a>Cradle - Touhou Gengaku Shiten</a>
+	      <li class="listContent"><a>Touhou Violet Flowers and Incense</a>
+		  <li class="listContent"><a>Touhou Gensou Mahjong OST</a>
+		  <li class="listContent"><a>Strange Creators of Outer World CD2</a>
+		</ol>
 	</section>
 	
 	<footer class="footer">
