--- a/Characters.html
+++ b/Characters.html
@@ -25,6 +25,7 @@
 	  
 	<section class="bodySection">
 	  <h1 class="bodyHeading">Characters</h1>
+	  <p class="bodyText">The Touhou universe is massive, hosting over 180 characters with the current release. Nearly all characters before EoSD are not mentioned again due to a creative diversion. Aside from those, most characters are supporting characters, a select few occasionally becoming playable characters.</p>
 	  <p class="bodySubhead">Protagonists</p>
 	  <ol>
 	    <li class="listContent"><a>Reimu Hakurei</a>
@@ -40,7 +41,7 @@
 		<li class="listContent"><a> Remilia Scarlet</a>
 		<li class="listContent"><a> Yuyuko Saigyouji</a>
 		<li class="listContent"><a> Suika Ibuki</a>
-        <li class="listContent"><a> Eirin Yagokoro</a> / <a>Kaugya Houraisen</a>
+                <li class="listContent"><a> Eirin Yagokoro</a> / <a>Kaugya Houraisen</a>
 		<li class="listContent"><a> Eiki Shiki, Yamaxanadu</a>
 		<li class="listContent"><a>Kanako Yasaka</a>
 		<li class="listContent"><a>Tenshi Hinanawi</a>
