--- a/Manga.html
+++ b/Manga.html
@@ -25,6 +25,7 @@
 	  
 	<section class="bodySection">
 	  <h1 class="bodyHeading">Official Works</h1>
+	  <p class="bodyText">ZUN has relesed a sizeable suite of literature, having authored 6 artbooks, 6 manga, 2 magazines, 1 supplemental lore story, and 9 short stories.</p>
 	  <p class="bodySubhead">Artbooks</p>
 	  <ol>
 		<a><li class="listContent">Bohemian Archive in Japanese Red</a>
